hphp/test/slow/lang/function_pointers.php.expectf
int(1)
int(42)
string(14) "callable check"
int(1)
object(HH\Vector)#5 (2) {
  [0]=>
  int(3)
  [1]=>
  int(2)
}
string(9) "HH\Vector"
string(5) "count"
object(HH\Vector)#7 (2) {
  [0]=>
  int(1)
  [1]=>
  int(3)
}
object(HH\Vector)#8 (2) {
  [0]=>
  int(1)
  [1]=>
  int(3)
}
string(12) "Hello World!"
int(1337)
int(0)

Warning: C::ref() expects parameter 1 by reference, but the call was not annotated with '&' in %s/function_pointers.php on line 73
int(0)
string(9) "inst_meth"
string(4) "meth"
function(foo)fun('foo')function(foo)
string(5) ""foo""
string(10) "f:3:"foo";"

Fatal error: Unable to unserialize a function value in %s/function_pointers.php on line 87
